# aidaily-digest

./: README.md  highlights.md
scripts/: .env.example  .gitignore  README.md  TWITTER_SETUP.md  database_schema.sql  deploy.sh  pyproject.toml  quick-deploy.sh  reddit_fetcher.py  run_daily_fetch.py  test_comments.py
scripts/entrypoints/: print_thread.py  process_content.py  run_daily_fetch.py  run_twitter_poster.py
scripts/monitor/: daily-summary.sh  webhook-summary.sh
scripts/sql/: database_schema.sql
scripts/sql/migrations/: add_processing_status_fields.sql  add_reddit_push_fields.sql  add_twitter_sent_field.sql  create_random_failed_posts_view.sql
scripts/src/: config_models.py  content_processor.py  database_utils.py  logging_config.py  reddit_fetcher.py  twitter_client.py  twitter_poster.py  validation_utils.py
scripts/src/config/: config_models.py
scripts/src/utils/: database_utils.py  url_fetcher.py  validation_utils.py
scripts/systemd/: content-processor.service  content-processor.timer  daily-summary.service  daily-summary.timer  reddit-fetcher.service  reddit-fetcher.timer  twitter-poster.service  twitter-poster.timer  webhook-summary.service  webhook-summary.timer
scripts/tests/: debug_tweepy_response.py  test_comments.py  test_dobby.py  test_single_submission.py  test_twitter_poster.py
tgbot/: .env.example  README.md  chat_handler.py  database.py  digest_generator.py  main.py  pyproject.toml
tgbot/src/tgbot/: __init__.py  bot.py
tgbot/src/tgbot/handlers/: __init__.py  commands.py  messages.py
tgbot/src/tgbot/models/: __init__.py  (+1 more)
(+18 files in other folders)
