[project]
name = "scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fireworks-ai>=0.17.16",
    "httpx[socks]>=0.28.1",
    "openai>=1.97.1",
    "praw>=7.8.1",
    "python-dotenv>=1.1.1",
    "supabase>=2.17.0",
]
